Archive2/31/4de6a84489ad0f/output
main.cpp:56:13: error: call to implicitly-deleted copy constructor of 'MyClass'
    MyClass mc2 = mc;
            ^     ~~
main.cpp:12:5: note: copy constructor is implicitly deleted because 'MyClass' has a user-declared move constructor
    MyClass( MyClass&& src) : count(src.count) {
    ^
1 error generated.
